--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "sentence-transformers>=2.2.2",
     "datetime>=5.2",
     "selenium>=4.11.2",
+    "pdfminer-six>=20221105",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
@@ -28,3 +29,6 @@ license = {text = "MIT"}
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[tool.pdm.scripts]
+start = "streamlit run app.py"
